tests/baselines/reference/missingReturnStatement1.errors.txt
==== tests/cases/compiler/missingReturnStatement1.ts (1 errors) ====
    class Foo {
        foo(): number {
               ~~~~~~
!!! error TS2131: Function declared a non-void return type, but has no return expression.
            //return 4;
        }
    }
    